Fixed invisible user's profile info

--- a/app/assets/stylesheets/partials/pages/_user_profile.scss
+++ b/app/assets/stylesheets/partials/pages/_user_profile.scss
@@ -427,7 +427,7 @@
       position: absolute;
       top: 0;
       bottom: 0;
-      right: -23%;
+      right: 0;
       width: 22%;
       background: #fff;
       border-left: 1px solid #E8EBF0;
